--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    Ingredient name: <%= ingredient.text_field :name %>
+    Ingredient quantity: <%= ingredient.text_field :quantity %>
+    <br>
+  <% end %>
+  <%= f.submit "Create recipe" %>
 <% end %>
